--- a/Sources/ATAGroup/ATAGroup.storyboard
+++ b/Sources/ATAGroup/ATAGroup.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -124,6 +124,53 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2R-Ic-Dvi">
+                                <rect key="frame" x="16" y="764" width="382" height="82"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CCD-B5-IMU">
+                                        <rect key="frame" x="16" y="16" width="50" height="50"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="9m8-10-rzi"/>
+                                            <constraint firstAttribute="width" constant="50" id="bDj-uZ-j7R"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Lb-hh-zAK">
+                                        <rect key="frame" x="74" y="16" width="292" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="JYT-7a-c7s"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="7Lb-hh-zAK" firstAttribute="centerY" secondItem="K2R-Ic-Dvi" secondAttribute="centerY" id="DaE-zR-yn0"/>
+                                    <constraint firstItem="CCD-B5-IMU" firstAttribute="centerY" secondItem="K2R-Ic-Dvi" secondAttribute="centerY" id="FuV-kl-phX"/>
+                                    <constraint firstAttribute="height" constant="100" id="SAw-OI-ynx"/>
+                                    <constraint firstAttribute="bottom" secondItem="7Lb-hh-zAK" secondAttribute="bottom" constant="16" id="Sic-ra-28O"/>
+                                    <constraint firstItem="7Lb-hh-zAK" firstAttribute="leading" secondItem="CCD-B5-IMU" secondAttribute="trailing" constant="8" id="iiP-1y-wnD"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Lb-hh-zAK" secondAttribute="trailing" constant="16" id="r02-42-qyU"/>
+                                    <constraint firstAttribute="top" secondItem="7Lb-hh-zAK" secondAttribute="top" constant="-16" id="tPg-cg-NTv"/>
+                                    <constraint firstItem="CCD-B5-IMU" firstAttribute="leading" secondItem="K2R-Ic-Dvi" secondAttribute="leading" constant="16" id="xM4-5n-sBm"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="circleCorner" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="SAw-OI-ynx"/>
+                                    </mask>
+                                </variation>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="28a-6W-MDX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -132,10 +179,16 @@
                             <constraint firstItem="Dhy-90-dYY" firstAttribute="top" secondItem="28a-6W-MDX" secondAttribute="top" id="FHX-IX-j0M"/>
                             <constraint firstAttribute="bottom" secondItem="Dhy-90-dYY" secondAttribute="bottom" id="FKQ-uF-ZEq"/>
                             <constraint firstItem="Dhy-90-dYY" firstAttribute="trailing" secondItem="28a-6W-MDX" secondAttribute="trailing" id="XtH-i1-0hl"/>
+                            <constraint firstItem="28a-6W-MDX" firstAttribute="trailing" secondItem="K2R-Ic-Dvi" secondAttribute="trailing" constant="16" id="bOx-Uj-pDL"/>
+                            <constraint firstItem="K2R-Ic-Dvi" firstAttribute="leading" secondItem="28a-6W-MDX" secondAttribute="leading" constant="16" id="nKO-df-kCV"/>
+                            <constraint firstItem="28a-6W-MDX" firstAttribute="bottom" secondItem="K2R-Ic-Dvi" secondAttribute="bottom" constant="16" id="wnq-zc-ODg"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Dhy-90-dYY" id="1h2-f6-Xh3"/>
+                        <outlet property="noAlertGrpImageView" destination="CCD-B5-IMU" id="Qyf-eG-Ihd"/>
+                        <outlet property="noAlertGrpLabel" destination="7Lb-hh-zAK" id="ewN-HU-UKM"/>
+                        <outlet property="noAlertGrpView" destination="K2R-Ic-Dvi" id="K1P-3Y-zo6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SCl-qY-R8c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -519,7 +572,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="mu2-SH-Qp1">
-                                                    <rect key="frame" x="16" y="13" width="166" height="114.5"/>
+                                                    <rect key="frame" x="16" y="13" width="166" height="114"/>
                                                     <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="0.89620888509999996" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
@@ -709,12 +762,15 @@
         <designable name="OnW-Ec-HqI">
             <size key="intrinsicContentSize" width="66" height="48"/>
         </designable>
+        <designable name="biD-lw-fN1">
+            <size key="intrinsicContentSize" width="216.5" height="43"/>
+        </designable>
         <designable name="eZu-Xb-oh3">
             <size key="intrinsicContentSize" width="155" height="48"/>
         </designable>
     </designables>
     <resources>
-        <image name="photo.on.rectangle" catalog="system" width="128" height="96"/>
+        <image name="photo.on.rectangle" catalog="system" width="128" height="97"/>
         <namedColor name="textOnPrimary">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
